[package]
name = "investing-api"
version = "0.2.2"
edition = "2021"
authors = ["github.com/jerryshell/investing-api"]

[dependencies]
reqwest = { version = "0.11.11", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1.20.1", features = ["full"] }
tokio-test = "0.4.2"
serde = "1.0.142"
serde_json = "1.0.83"
serde_derive = "1.0.142"
futures = "0.3.21"
csv = "1.1.6"
clap = { version = "3.2.16", features = ["derive"] }
anyhow = "1.0.59"
scraper = "0.13.0"
chrono = "0.4.20"

[profile.release]
lto = true
