[package]
name = "investing-api"
version = "0.2.2"
edition = "2021"
authors = ["github.com/jerryshell/investing-api"]

[dependencies]
reqwest = { version = "0.11.11", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1.21.0", features = ["full"] }
tokio-test = "0.4.2"
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
futures = "0.3.24"
csv = "1.1.6"
clap = { version = "3.2.20", features = ["derive"] }
anyhow = "1.0.64"
scraper = "0.13.0"
chrono = "0.4.22"

[profile.release]
lto = true
