[package]
name = "investing-api"
version = "0.2.2"
edition = "2021"
authors = ["github.com/jerryshell/investing-api"]

[dependencies]
reqwest = { version = "0.11.13", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1.24.1", features = ["full"] }
tokio-test = "0.4.2"
serde = "1.0.152"
serde_json = "1.0.91"
serde_derive = "1.0.152"
futures = "0.3.25"
csv = "1.1.6"
clap = { version = "4.1.0", features = ["derive"] }
anyhow = "1.0.68"
scraper = "0.14.0"
chrono = "0.4.23"

[profile.release]
lto = true
